# BE-Sridharan-A-UID00666-A3

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
apps/base/: admin.py  models.py  serializers.py
apps/base/migrations/: 0001_initial.py
apps/bookings/: admin.py  models.py  serializers.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_booking_status.py
apps/cinemas/: apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/cinemas/migrations/: 0001_initial.py  0002_rename_seats_per_rows_cinema_seats_per_row.py  0003_cinema_slug.py
apps/movies/: filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/movies/migrations/: 0001_initial.py  0002_movie_slug.py  0003_alter_movie_slug.py
apps/slots/: apps.py  models.py  serializers.py  urls.py  views.py
apps/slots/migrations/: 0001_initial.py  0002_remove_slot_end_time_slot_language.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
bookmyshow/: asgi.py  settings.py  urls.py  wsgi.py
