[project]
name = "bookmyshow-backend"
version = "0.1.0"
requires-python = ">=3.12"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

# Linting rules
[tool.ruff.lint]
select = ["E","F","W","I","UP","B","SIM","C4","PIE"] # for a list of all rules refer: https://docs.astral.sh/ruff/rules/
ignore = ["E501"]

# Ignore specific files
[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["F401"]
"**/__init__.py" = ["F401"]

# Import sorting
[tool.ruff.lint.isort]
known-first-party = ["apps"]

# Formatting (Ruff formatter)
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
